# OpenCL

./: .gitignore  README.md
AdditionOfNumber/: CMakeLists.txt  add  add.c  kernel.cl  makefile
HelloWorld/: CMakeLists.txt  hello.c  kernel.cl  makefile
ImageProcessing/: CMakeLists.txt  RawImageProcessing.c  kernel.cl
MadelbrotSet/: CMakeLists.txt  kernel.cl  makefile  set.c
MatrixMultiplication/: CMakeLists.txt  kernel.cl  makefile  mult  mult.c
MatrixMultiplicationTiled/: CMakeLists.txt  MatrixMultiplicationTiled.c  kernel.cl  makefile
MemoryBitmap/: CMakeLists.txt  WaveformsMemoryBitmap.c  kernel.cl  makefile  raw_image_viewer.py
VectorAddition/: CMakeLists.txt  add  add.c  kernel.cl  makefile
madelbrot-set/: kernel.cl  makefile  mandelbrot.ppm  set  set.c
